--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CoolWeather</string>
+    <string name="app_name">酷欧天气</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_weather">WeatherActivity</string>
 </resources>
